--- a/index.html
+++ b/index.html
@@ -226,32 +226,46 @@
                         Cuéntanos de qué quieres hablar!
                     </p>
                 </div>
-                <div class="row">
-                    <div class="col">
+                <form action="" class="mx-5 px-5">
+                    <div class="row text-center">
+                        <div class="col">
+                            <input
+                                type="text"
+                                class="form-control"
+                                placeholder="Nombre"
+                                aria-label="First name"
+                            />
+                        </div>
+                        <div class="col">
+                            <input
+                                type="text"
+                                class="form-control"
+                                placeholder="Apellido"
+                                aria-label="Last name"
+                            />
+                        </div>
+                    </div>
+                    <div class="col py-3">
+                        <div class="form-floating">
+                            <textarea
+                                class="form-control"
+                                placeholder="Leave a comment here"
+                                id="floatingTextarea"
+                            ></textarea>
+                            <label for="floatingTextarea"
+                                >Sobre qué quieres hablar?</label
+                            >
+                        </div>
+                    </div>
+                    <p class="titleArticleP">Recuerda incluir un título para tu charla</p>
+                    <div class="d-grid gap-2 my-3">
                         <input
-                            type="text"
-                            class="form-control"
-                            placeholder="Nombre"
-                            aria-label="First name"
+                            class="btn btn-primary btn-success"
+                            type="submit"
+                            value="Submit"
                         />
                     </div>
-                    <div class="col">
-                        <input
-                            type="text"
-                            class="form-control"
-                            placeholder="Apellido"
-                            aria-label="Last name"
-                        />
-                    </div>
-                </div>
-                <div class="col">
-                    <input
-                        class="form-control"
-                        type="text"
-                        placeholder="Sobre qué quieres hablar?"
-                        aria-label=".form-control-lg example"
-                    />
-                </div>
+                </form>
             </article>
         </section>
 
